# InflatedBeam

./: README.md  beam_visualizer.py  environment.yml  inflated_beam.py  main.py  pyproject.toml  setup.py  visualizer.py
examples/: buckling.py  buckling_with_imperfection.py  center_section.py  gravity.py  main.py  simply_supported_beam.py  simply_supported_beam_bloch.py
src/inflated_beam/: model.py  visualizer.py
